# bevy_cosmic_edit

./: Cargo.toml
examples/: basic_sprite.rs  basic_ui.rs  every_option.rs  font_per_widget.rs  image_background.rs  multiple_sprites.rs  password.rs  placeholder.rs  readonly.rs  sprite_and_ui_clickable.rs
src/: buffer.rs  cosmic_edit.rs  cursor.rs  input.rs  lib.rs  placeholder.rs  render.rs  util.rs  widget.rs
util/: Cargo.toml
util/src/: lib.rs
